--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
 
 
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
 
-
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.1.7'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
