--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
 
+    implementation 'com.android.volley:volley:1.1.1'
 
 
     testImplementation 'junit:junit:4.12'
