--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,13 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
 
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
+
 }
+apply plugin: 'com.google.gms.google-services'
